Footer finish + creation Home component + Header and Footer stylization

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/img/Logo/LogoKayyDieund.png" />
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/img/Logo/LogoKayyDieund2-removebg-preview2.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,7 +14,7 @@
     />
     <link
       rel="apple-touch-icon"
-      href="%PUBLIC_URL%/img/Logo/LogoKayyDieund.png"
+      href="%PUBLIC_URL%/img/Logo/LogoKayyDieund2-removebg-preview2.png"
     />
 
     <title>Kayy Dieund Shop</title>
